crates/ruff_python_parser/tests/snapshots/invalid_syntax@statements__with__ambiguous_lpar_with_items.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/invalid/statements/with/ambiguous_lpar_with_items.py
---
## AST

```
Module(
    ModModule {
        range: 0..731,
        body: [
            With(
                StmtWith {
                    range: 163..188,
                    is_async: false,
                    items: [
                        WithItem {
                            range: 168..182,
                            context_expr: Tuple(
                                ExprTuple {
                                    range: 168..182,
                                    elts: [
                                        Name(
                                            ExprName {
                                                range: 169..174,
                                                id: "item1",
                                                ctx: Load,
                                            },
                                        ),
                                        Name(
                                            ExprName {
                                                range: 176..181,
                                                id: "item2",
                                                ctx: Load,
                                            },
                                        ),
                                    ],
                                    ctx: Load,
                                    parenthesized: true,
                                },
                            ),
                            optional_vars: None,
                        },
                    ],
                    body: [
                        Expr(
                            StmtExpr {
                                range: 185..188,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        range: 185..188,
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
            With(
                StmtWith {
                    range: 189..219,
                    is_async: false,
                    items: [
                        WithItem {
                            range: 194..208,
                            context_expr: Tuple(
                                ExprTuple {
                                    range: 194..208,
                                    elts: [
                                        Name(
                                            ExprName {
                                                range: 195..200,
                                                id: "item1",
                                                ctx: Load,
                                            },
                                        ),
                                        Name(
                                            ExprName {
                                                range: 202..207,
                                                id: "item2",
                                                ctx: Load,
                                            },
                                        ),
                                    ],
                                    ctx: Load,
                                    parenthesized: true,
                                },
                            ),
                            optional_vars: None,
                        },
                        WithItem {
                            range: 213..214,
                            context_expr: Name(
                                ExprName {
                                    range: 213..214,
                                    id: "f",
                                    ctx: Load,
                                },
                            ),
                            optional_vars: None,
                        },
                    ],
                    body: [
                        Expr(
                            StmtExpr {
                                range: 216..219,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        range: 216..219,
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
            With(
                StmtWith {
                    range: 220..252,
                    is_async: false,
                    items: [
                        WithItem {
                            range: 225..239,
                            context_expr: Tuple(
                                ExprTuple {
                                    range: 225..239,
                                    elts: [
                                        Name(
                                            ExprName {
                                                range: 226..231,
                                                id: "item1",
                                                ctx: Load,
                                            },
                                        ),
                                        Name(
                                            ExprName {
                                                range: 233..238,
                                                id: "item2",
                                                ctx: Load,
                                            },
                                        ),
                                    ],
                                    ctx: Load,
                                    parenthesized: true,
                                },
                            ),
                            optional_vars: None,
                        },
                        WithItem {
                            range: 241..246,
                            context_expr: Name(
                                ExprName {
                                    range: 241..246,
                                    id: "item3",
                                    ctx: Load,
                                },
                            ),
                            optional_vars: None,
                        },
                    ],
                    body: [
                        Expr(
                            StmtExpr {
                                range: 249..252,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        range: 249..252,
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
            With(
                StmtWith {
                    range: 253..270,
                    is_async: false,
                    items: [
                        WithItem {
                            range: 258..265,
                            context_expr: Starred(
                                ExprStarred {
                                    range: 259..264,
                                    value: Name(
                                        ExprName {
                                            range: 260..264,
                                            id: "item",
                                            ctx: Load,
                                        },
                                    ),
                                    ctx: Load,
                                },
                            ),
                            optional_vars: None,
                        },
                    ],
                    body: [
                        Expr(
                            StmtExpr {
                                range: 267..270,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        range: 267..270,
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
            With(
                StmtWith {
                    range: 271..298,
                    is_async: false,
                    items: [
                        WithItem {
                            range: 277..292,
                            context_expr: Named(
                                ExprNamed {
                                    range: 277..287,
                                    target: Name(
                                        ExprName {
                                            range: 277..281,
                                            id: "item",
                                            ctx: Store,
                                        },
                                    ),
                                    value: NumberLiteral(
                                        ExprNumberLiteral {
                                            range: 285..287,
                                            value: Int(
                                                10,
                                            ),
                                        },
                                    ),
                                },
                            ),
                            optional_vars: Some(
                                Name(
                                    ExprName {
                                        range: 291..292,
                                        id: "f",
                                        ctx: Store,
                                    },
                                ),
                            ),
                        },
                    ],
                    body: [
                        Expr(
                            StmtExpr {
                                range: 295..298,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        range: 295..298,
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
            With(
                StmtWith {
                    range: 299..334,
                    is_async: false,
                    items: [
                        WithItem {
                            range: 305..310,
                            context_expr: Name(
                                ExprName {
                                    range: 305..310,
                                    id: "item1",
                                    ctx: Load,
                                },
                            ),
                            optional_vars: None,
                        },
                        WithItem {
                            range: 312..328,
                            context_expr: Named(
                                ExprNamed {
                                    range: 312..323,
                                    target: Name(
                                        ExprName {
                                            range: 312..317,
                                            id: "item2",
                                            ctx: Store,
                                        },
                                    ),
                                    value: NumberLiteral(
                                        ExprNumberLiteral {
                                            range: 321..323,
                                            value: Int(
                                                10,
                                            ),
                                        },
                                    ),
                                },
                            ),
                            optional_vars: Some(
                                Name(
                                    ExprName {
                                        range: 327..328,
                                        id: "f",
                                        ctx: Store,
                                    },
                                ),
                            ),
                        },
                    ],
                    body: [
                        Expr(
                            StmtExpr {
                                range: 331..334,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        range: 331..334,
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
            With(
                StmtWith {
                    range: 335..373,
                    is_async: false,
                    items: [
                        WithItem {
                            range: 341..361,
                            context_expr: Generator(
                                ExprGenerator {
                                    range: 341..361,
                                    elt: Name(
                                        ExprName {
                                            range: 341..342,
                                            id: "x",
                                            ctx: Load,
                                        },
                                    ),
                                    generators: [
                                        Comprehension {
                                            range: 343..361,
                                            target: Name(
                                                ExprName {
                                                    range: 347..348,
                                                    id: "x",
                                                    ctx: Store,
                                                },
                                            ),
                                            iter: Call(
                                                ExprCall {
                                                    range: 352..361,
                                                    func: Name(
                                                        ExprName {
                                                            range: 352..357,
                                                            id: "range",
                                                            ctx: Load,
                                                        },
                                                    ),
                                                    arguments: Arguments {
                                                        range: 357..361,
                                                        args: [
                                                            NumberLiteral(
                                                                ExprNumberLiteral {
                                                                    range: 358..360,
                                                                    value: Int(
                                                                        10,
                                                                    ),
                                                                },
                                                            ),
                                                        ],
                                                        keywords: [],
                                                    },
                                                },
                                            ),
                                            ifs: [],
                                            is_async: false,
                                        },
                                    ],
                                    parenthesized: false,
                                },
                            ),
                            optional_vars: None,
                        },
                        WithItem {
                            range: 363..367,
                            context_expr: Name(
                                ExprName {
                                    range: 363..367,
                                    id: "item",
                                    ctx: Load,
                                },
                            ),
                            optional_vars: None,
                        },
                    ],
                    body: [
                        Expr(
                            StmtExpr {
                                range: 370..373,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        range: 370..373,
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
            With(
                StmtWith {
                    range: 374..412,
                    is_async: false,
                    items: [
                        WithItem {
                            range: 380..384,
                            context_expr: Name(
                                ExprName {
                                    range: 380..384,
                                    id: "item",
                                    ctx: Load,
                                },
                            ),
                            optional_vars: None,
                        },
                        WithItem {
                            range: 386..406,
                            context_expr: Generator(
                                ExprGenerator {
                                    range: 386..406,
                                    elt: Name(
                                        ExprName {
                                            range: 386..387,
                                            id: "x",
                                            ctx: Load,
                                        },
                                    ),
                                    generators: [
                                        Comprehension {
                                            range: 388..406,
                                            target: Name(
                                                ExprName {
                                                    range: 392..393,
                                                    id: "x",
                                                    ctx: Store,
                                                },
                                            ),
                                            iter: Call(
                                                ExprCall {
                                                    range: 397..406,
                                                    func: Name(
                                                        ExprName {
                                                            range: 397..402,
                                                            id: "range",
                                                            ctx: Load,
                                                        },
                                                    ),
                                                    arguments: Arguments {
                                                        range: 402..406,
                                                        args: [
                                                            NumberLiteral(
                                                                ExprNumberLiteral {
                                                                    range: 403..405,
                                                                    value: Int(
                                                                        10,
                                                                    ),
                                                                },
                                                            ),
                                                        ],
                                                        keywords: [],
                                                    },
                                                },
                                            ),
                                            ifs: [],
                                            is_async: false,
                                        },
                                    ],
                                    parenthesized: false,
                                },
                            ),
                            optional_vars: None,
                        },
                    ],
                    body: [
                        Expr(
                            StmtExpr {
                                range: 409..412,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        range: 409..412,
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
            With(
                StmtWith {
                    range: 473..492,
                    is_async: false,
                    items: [
                        WithItem {
                            range: 479..486,
                            context_expr: Starred(
                                ExprStarred {
                                    range: 480..485,
                                    value: Name(
                                        ExprName {
                                            range: 481..485,
                                            id: "item",
                                            ctx: Load,
                                        },
                                    ),
                                    ctx: Load,
                                },
                            ),
                            optional_vars: None,
                        },
                    ],
                    body: [
                        Expr(
                            StmtExpr {
                                range: 489..492,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        range: 489..492,
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
            With(
                StmtWith {
                    range: 494..528,
                    is_async: false,
                    items: [
                        WithItem {
                            range: 500..516,
                            context_expr: Generator(
                                ExprGenerator {
                                    range: 500..516,
                                    elt: Starred(
                                        ExprStarred {
                                            range: 500..502,
                                            value: Name(
                                                ExprName {
                                                    range: 501..502,
                                                    id: "x",
                                                    ctx: Load,
                                                },
                                            ),
                                            ctx: Load,
                                        },
                                    ),
                                    generators: [
                                        Comprehension {
                                            range: 503..516,
                                            target: Name(
                                                ExprName {
                                                    range: 507..508,
                                                    id: "x",
                                                    ctx: Store,
                                                },
                                            ),
                                            iter: Name(
                                                ExprName {
                                                    range: 512..516,
                                                    id: "iter",
                                                    ctx: Load,
                                                },
                                            ),
                                            ifs: [],
                                            is_async: false,
                                        },
                                    ],
                                    parenthesized: false,
                                },
                            ),
                            optional_vars: None,
                        },
                        WithItem {
                            range: 518..522,
                            context_expr: Name(
                                ExprName {
                                    range: 518..522,
                                    id: "item",
                                    ctx: Load,
                                },
                            ),
                            optional_vars: None,
                        },
                    ],
                    body: [
                        Expr(
                            StmtExpr {
                                range: 525..528,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        range: 525..528,
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
            With(
                StmtWith {
                    range: 529..571,
                    is_async: false,
                    items: [
                        WithItem {
                            range: 535..540,
                            context_expr: Name(
                                ExprName {
                                    range: 535..540,
                                    id: "item1",
                                    ctx: Load,
                                },
                            ),
                            optional_vars: None,
                        },
                        WithItem {
                            range: 542..558,
                            context_expr: Generator(
                                ExprGenerator {
                                    range: 542..558,
                                    elt: Starred(
                                        ExprStarred {
                                            range: 542..544,
                                            value: Name(
                                                ExprName {
                                                    range: 543..544,
                                                    id: "x",
                                                    ctx: Load,
                                                },
                                            ),
                                            ctx: Load,
                                        },
                                    ),
                                    generators: [
                                        Comprehension {
                                            range: 545..558,
                                            target: Name(
                                                ExprName {
                                                    range: 549..550,
                                                    id: "x",
                                                    ctx: Store,
                                                },
                                            ),
                                            iter: Name(
                                                ExprName {
                                                    range: 554..558,
                                                    id: "iter",
                                                    ctx: Load,
                                                },
                                            ),
                                            ifs: [],
                                            is_async: false,
                                        },
                                    ],
                                    parenthesized: false,
                                },
                            ),
                            optional_vars: None,
                        },
                        WithItem {
                            range: 560..565,
                            context_expr: Name(
                                ExprName {
                                    range: 560..565,
                                    id: "item2",
                                    ctx: Load,
                                },
                            ),
                            optional_vars: None,
                        },
                    ],
                    body: [
                        Expr(
                            StmtExpr {
                                range: 568..571,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        range: 568..571,
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
            With(
                StmtWith {
                    range: 572..594,
                    is_async: false,
                    items: [
                        WithItem {
                            range: 578..584,
                            context_expr: Name(
                                ExprName {
                                    range: 578..579,
                                    id: "x",
                                    ctx: Load,
                                },
                            ),
                            optional_vars: Some(
                                Name(
                                    ExprName {
                                        range: 583..584,
                                        id: "f",
                                        ctx: Store,
                                    },
                                ),
                            ),
                        },
                        WithItem {
                            range: 586..588,
                            context_expr: Starred(
                                ExprStarred {
                                    range: 586..588,
                                    value: Name(
                                        ExprName {
                                            range: 587..588,
                                            id: "y",
                                            ctx: Load,
                                        },
                                    ),
                                    ctx: Load,
                                },
                            ),
                            optional_vars: None,
                        },
                    ],
                    body: [
                        Expr(
                            StmtExpr {
                                range: 591..594,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        range: 591..594,
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
            With(
                StmtWith {
                    range: 595..617,
                    is_async: false,
                    items: [
                        WithItem {
                            range: 600..612,
                            context_expr: Tuple(
                                ExprTuple {
                                    range: 600..612,
                                    elts: [
                                        Name(
                                            ExprName {
                                                range: 601..602,
                                                id: "x",
                                                ctx: Load,
                                            },
                                        ),
                                        Yield(
                                            ExprYield {
                                                range: 604..611,
                                                value: Some(
                                                    Name(
                                                        ExprName {
                                                            range: 610..611,
                                                            id: "y",
                                                            ctx: Load,
                                                        },
                                                    ),
                                                ),
                                            },
                                        ),
                                    ],
                                    ctx: Load,
                                    parenthesized: true,
                                },
                            ),
                            optional_vars: None,
                        },
                    ],
                    body: [
                        Expr(
                            StmtExpr {
                                range: 614..617,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        range: 614..617,
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
            With(
                StmtWith {
                    range: 618..643,
                    is_async: false,
                    items: [
                        WithItem {
                            range: 623..638,
                            context_expr: Tuple(
                                ExprTuple {
                                    range: 623..638,
                                    elts: [
                                        Name(
                                            ExprName {
                                                range: 624..625,
                                                id: "x",
                                                ctx: Load,
                                            },
                                        ),
                                        Yield(
                                            ExprYield {
                                                range: 627..637,
                                                value: Some(
                                                    Tuple(
                                                        ExprTuple {
                                                            range: 633..637,
                                                            elts: [
                                                                Name(
                                                                    ExprName {
                                                                        range: 633..634,
                                                                        id: "y",
                                                                        ctx: Load,
                                                                    },
                                                                ),
                                                                Name(
                                                                    ExprName {
                                                                        range: 636..637,
                                                                        id: "z",
                                                                        ctx: Load,
                                                                    },
                                                                ),
                                                            ],
                                                            ctx: Load,
                                                            parenthesized: false,
                                                        },
                                                    ),
                                                ),
                                            },
                                        ),
                                    ],
                                    ctx: Load,
                                    parenthesized: true,
                                },
                            ),
                            optional_vars: None,
                        },
                    ],
                    body: [
                        Expr(
                            StmtExpr {
                                range: 640..643,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        range: 640..643,
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
            With(
                StmtWith {
                    range: 644..671,
                    is_async: false,
                    items: [
                        WithItem {
                            range: 649..666,
                            context_expr: Tuple(
                                ExprTuple {
                                    range: 649..666,
                                    elts: [
                                        Name(
                                            ExprName {
                                                range: 650..651,
                                                id: "x",
                                                ctx: Load,
                                            },
                                        ),
                                        YieldFrom(
                                            ExprYieldFrom {
                                                range: 653..665,
                                                value: Name(
                                                    ExprName {
                                                        range: 664..665,
                                                        id: "y",
                                                        ctx: Load,
                                                    },
                                                ),
                                            },
                                        ),
                                    ],
                                    ctx: Load,
                                    parenthesized: true,
                                },
                            ),
                            optional_vars: None,
                        },
                    ],
                    body: [
                        Expr(
                            StmtExpr {
                                range: 668..671,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        range: 668..671,
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
            With(
                StmtWith {
                    range: 672..688,
                    is_async: false,
                    items: [
                        WithItem {
                            range: 678..684,
                            context_expr: Name(
                                ExprName {
                                    range: 678..679,
                                    id: "x",
                                    ctx: Load,
                                },
                            ),
                            optional_vars: Some(
                                Name(
                                    ExprName {
                                        range: 683..684,
                                        id: "f",
                                        ctx: Store,
                                    },
                                ),
                            ),
                        },
                        WithItem {
                            range: 686..687,
                            context_expr: Name(
                                ExprName {
                                    range: 686..687,
                                    id: "y",
                                    ctx: Load,
                                },
                            ),
                            optional_vars: None,
                        },
                    ],
                    body: [],
                },
            ),
            AnnAssign(
                StmtAnnAssign {
                    range: 692..698,
                    target: Name(
                        ExprName {
                            range: 692..693,
                            id: "f",
                            ctx: Store,
                        },
                    ),
                    annotation: EllipsisLiteral(
                        ExprEllipsisLiteral {
                            range: 695..698,
                        },
                    ),
                    value: None,
                    simple: true,
                },
            ),
            With(
                StmtWith {
                    range: 699..731,
                    is_async: false,
                    items: [
                        WithItem {
                            range: 705..725,
                            context_expr: Generator(
                                ExprGenerator {
                                    range: 705..720,
                                    elt: Name(
                                        ExprName {
                                            range: 705..706,
                                            id: "x",
                                            ctx: Load,
                                        },
                                    ),
                                    generators: [
                                        Comprehension {
                                            range: 707..720,
                                            target: Name(
                                                ExprName {
                                                    range: 711..712,
                                                    id: "x",
                                                    ctx: Store,
                                                },
                                            ),
                                            iter: Name(
                                                ExprName {
                                                    range: 716..720,
                                                    id: "iter",
                                                    ctx: Load,
                                                },
                                            ),
                                            ifs: [],
                                            is_async: false,
                                        },
                                    ],
                                    parenthesized: false,
                                },
                            ),
                            optional_vars: Some(
                                Name(
                                    ExprName {
                                        range: 724..725,
                                        id: "y",
                                        ctx: Store,
                                    },
                                ),
                            ),
                        },
                    ],
                    body: [
                        Expr(
                            StmtExpr {
                                range: 728..731,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        range: 728..731,
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
        ],
    },
)
```
## Errors

  |
2 | # These cases should raise the correct syntax error and recover properly.
3 | 
4 | with (item1, item2),: ...
  |                     ^ Syntax Error: Expected an expression
5 | with (item1, item2), as f: ...
6 | with (item1, item2), item3,: ...
  |


  |
4 | with (item1, item2),: ...
5 | with (item1, item2), as f: ...
  |                      ^^ Syntax Error: Expected an expression
6 | with (item1, item2), item3,: ...
7 | with (*item): ...
  |


  |
4 | with (item1, item2),: ...
5 | with (item1, item2), as f: ...
6 | with (item1, item2), item3,: ...
  |                           ^ Syntax Error: Trailing comma not allowed
7 | with (*item): ...
8 | with (item := 10 as f): ...
  |


  |
5 | with (item1, item2), as f: ...
6 | with (item1, item2), item3,: ...
7 | with (*item): ...
  |       ^^^^^ Syntax Error: starred expression cannot be used here
8 | with (item := 10 as f): ...
9 | with (item1, item2 := 10 as f): ...
  |


   |
 6 | with (item1, item2), item3,: ...
 7 | with (*item): ...
 8 | with (item := 10 as f): ...
   |       ^^^^^^^^^^ Syntax Error: unparenthesized named expression cannot be used here
 9 | with (item1, item2 := 10 as f): ...
10 | with (x for x in range(10), item): ...
   |


   |
 7 | with (*item): ...
 8 | with (item := 10 as f): ...
 9 | with (item1, item2 := 10 as f): ...
   |              ^^^^^^^^^^^ Syntax Error: unparenthesized named expression cannot be used here
10 | with (x for x in range(10), item): ...
11 | with (item, x for x in range(10)): ...
   |


   |
 8 | with (item := 10 as f): ...
 9 | with (item1, item2 := 10 as f): ...
10 | with (x for x in range(10), item): ...
   |       ^^^^^^^^^^^^^^^^^^^^ Syntax Error: unparenthesized generator expression cannot be used here
11 | with (item, x for x in range(10)): ...
   |


   |
 9 | with (item1, item2 := 10 as f): ...
10 | with (x for x in range(10), item): ...
11 | with (item, x for x in range(10)): ...
   |             ^^^^^^^^^^^^^^^^^^^^ Syntax Error: unparenthesized generator expression cannot be used here
12 | 
13 | # Make sure the parser doesn't report the same error twice
   |


   |
13 | # Make sure the parser doesn't report the same error twice
14 | with ((*item)): ...
   |        ^^^^^ Syntax Error: starred expression cannot be used here
15 | 
16 | with (*x for x in iter, item): ...
   |


   |
14 | with ((*item)): ...
15 | 
16 | with (*x for x in iter, item): ...
   |       ^^ Syntax Error: iterable unpacking cannot be used in a comprehension
17 | with (item1, *x for x in iter, item2): ...
18 | with (x as f, *y): ...
   |


   |
16 | with (*x for x in iter, item): ...
17 | with (item1, *x for x in iter, item2): ...
   |              ^^ Syntax Error: iterable unpacking cannot be used in a comprehension
18 | with (x as f, *y): ...
19 | with (x, yield y): ...
   |


   |
16 | with (*x for x in iter, item): ...
17 | with (item1, *x for x in iter, item2): ...
18 | with (x as f, *y): ...
   |               ^^ Syntax Error: starred expression cannot be used here
19 | with (x, yield y): ...
20 | with (x, yield y, z): ...
   |


   |
17 | with (item1, *x for x in iter, item2): ...
18 | with (x as f, *y): ...
19 | with (x, yield y): ...
   |          ^^^^^^^ Syntax Error: yield expression cannot be used here
20 | with (x, yield y, z): ...
21 | with (x, yield from y): ...
   |


   |
18 | with (x as f, *y): ...
19 | with (x, yield y): ...
20 | with (x, yield y, z): ...
   |          ^^^^^^^^^^ Syntax Error: yield expression cannot be used here
21 | with (x, yield from y): ...
22 | with (x as f, y) as f: ...
   |


   |
19 | with (x, yield y): ...
20 | with (x, yield y, z): ...
21 | with (x, yield from y): ...
   |          ^^^^^^^^^^^^ Syntax Error: yield expression cannot be used here
22 | with (x as f, y) as f: ...
23 | with (x for x in iter as y): ...
   |


   |
20 | with (x, yield y, z): ...
21 | with (x, yield from y): ...
22 | with (x as f, y) as f: ...
   |                  ^^ Syntax Error: expected Colon, found As
23 | with (x for x in iter as y): ...
   |


   |
21 | with (x, yield from y): ...
22 | with (x as f, y) as f: ...
23 | with (x for x in iter as y): ...
   |       ^^^^^^^^^^^^^^^ Syntax Error: unparenthesized generator expression cannot be used here
   |
